login register set up

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -478,12 +478,12 @@ label {
 	color: #ff4612;
 }
 
-.main-menu ul li.active>a,
-.main-header .main-menu ul li .submenu>li.active>a {
+.main-menu ul li a.active,
+.main-header .main-menu ul li .submenu>li a.active {
 	color: #ff4612;
 }
 
-.main-menu ul li::before {
+.main-menu ul li a::before {
 	content: "\f116";
 	position: absolute;
 	font-family: Flaticon;
@@ -498,12 +498,12 @@ label {
 	opacity: 0;
 }
 
-.main-menu ul li.active::before {
+.main-menu ul li a.active::before {
 	left: -25px;
 	opacity: 1;
 }
 
-.main-menu ul li:hover::before {
+.main-menu ul li a:hover::before {
 	opacity: 1;
 	left: -25px;
 }
