--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3280,7 +3280,7 @@ label {
 }
 
 .area-wrap-bg {
-	background-image: url(../img/bg/quote_bg.jpg);
+	background-image: url(../img/deliveryboy.jpg);
 	position: absolute;
 	left: 0;
 	top: 0;
