--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,16 @@ a {
 ul.dropdown-menu.show {
   left: -60px !important;
 }
+
+.single-services .services-thumb img {
+  height: 200px;
+}
+
+button.navbar-toggler {
+  background: url(../src/img/menu.png);
+  background-repeat: no-repeat;
+}
+
+.nav_item img {
+  width: 50px !important;
+}
